# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml  railway.json
.github/workflows/: pyci.yml
page_analyzer/: additional_func.py  app.py  check.py  db.py  test.py
page_analyzer/templates/: base.html  index.html  urls.html  urls_id.html
tests/: test_page_analyzer.py
tests/fixtures/: test_data.html
